--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -1,9 +1,9 @@
-name: Upload DON Secrets
+name: upload
 
 on:
   schedule:
-    - cron: '*/10 * * * *'  # every 10 minutes
-  workflow_dispatch:        # allows manual trigger
+    - cron: '*/10 * * * *'   # every 10 minutes
+  workflow_dispatch:          # allows manual trigger
 
 jobs:
   upload:
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false  # so we can use our own token for pushing
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -26,3 +28,14 @@ jobs:
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           SEPOLIA_RPC_URL: ${{ secrets.SEPOLIA_RPC_URL }}
         run: node upload-secrets.js
+
+      - name: Commit and push updated activeSecrets.json
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add activeSecrets.json
+          git commit -m "Update activeSecrets.json [skip ci]" || echo "No changes to commit"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
