--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -19,11 +19,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: npm
           cache-dependency-path: package-lock.json
 
+      # Ensure optional deps aren't forced on, then skip them on Linux
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm config set optional true
+          npm ci --no-audit --no-fund --no-optional
 
       - name: Run upload-secrets
         env:
@@ -42,4 +45,3 @@ jobs:
           git add activeSecrets.json
           git commit -m "Update activeSecrets.json [skip ci]" || exit 0
           git push "https://x-access-token:${GITHUB_TOKEN}@github.com/${REPO}.git" "HEAD:${BRANCH}"
-
