--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -22,11 +22,9 @@ jobs:
           cache: npm
           cache-dependency-path: package-lock.json
 
-      # Ensure optional deps aren't forced on, then skip them on Linux
       - name: Install dependencies
         run: |
-          npm config set optional true
-          npm ci --no-audit --no-fund --no-optional
+          npm ci --omit=optional --no-audit --no-fund
 
       - name: Run upload-secrets
         env:
@@ -45,3 +43,4 @@ jobs:
           git add activeSecrets.json
           git commit -m "Update activeSecrets.json [skip ci]" || exit 0
           git push "https://x-access-token:${GITHUB_TOKEN}@github.com/${REPO}.git" "HEAD:${BRANCH}"
+
