--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -22,9 +22,10 @@ jobs:
           cache: npm
           cache-dependency-path: package-lock.json
 
+      # Use npm install (not ci) to avoid EBADPLATFORM on mac-only deps like fsevents
       - name: Install dependencies
         run: |
-          npm ci --omit=optional --no-audit --no-fund
+          npm install --omit=optional --no-audit --no-fund
 
       - name: Run upload-secrets
         env:
@@ -43,4 +44,3 @@ jobs:
           git add activeSecrets.json
           git commit -m "Update activeSecrets.json [skip ci]" || exit 0
           git push "https://x-access-token:${GITHUB_TOKEN}@github.com/${REPO}.git" "HEAD:${BRANCH}"
-
