--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -1,46 +1,35 @@
-name: upload
+name: Rebuild package-lock on Linux
 
 on:
-  schedule:
-    - cron: '*/10 * * * *'
   workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
-  upload:
+  rebuild-lockfile:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
-          cache-dependency-path: package-lock.json
 
-      # Use npm install (not ci) to avoid EBADPLATFORM on mac-only deps like fsevents
-      - name: Install dependencies
+      - name: Rebuild lockfile (Linux)
         run: |
-          npm install --omit=optional --no-audit --no-fund
+          rm -rf node_modules package-lock.json
+          npm install --package-lock-only
 
-      - name: Run upload-secrets
-        env:
-          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-          SEPOLIA_RPC_URL: ${{ secrets.SEPOLIA_RPC_URL }}
-        run: node upload-secrets.js
-
-      - name: Commit and push updated activeSecrets.json
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: ${{ github.ref_name }}
-          REPO: ${{ github.repository }}
+      - name: Commit and push lockfile
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add activeSecrets.json
-          git commit -m "Update activeSecrets.json [skip ci]" || exit 0
-          git push "https://x-access-token:${GITHUB_TOKEN}@github.com/${REPO}.git" "HEAD:${BRANCH}"
+          git add package-lock.json
+          git diff --cached --quiet && echo "No changes" || git commit -m "chore: rebuild package-lock.json on Linux"
+          git push
