--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -21,15 +21,15 @@ jobs:
           node-version: 20
           cache: npm
 
-      - name: Rebuild lockfile (Linux)
+      - name: Rebuild lockfile (Linux, ignore scripts)
         run: |
           rm -rf node_modules package-lock.json
-          npm install --package-lock-only
+          npm install --package-lock-only --ignore-scripts
 
       - name: Commit and push lockfile
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add package-lock.json
-          git diff --cached --quiet && echo "No changes" || git commit -m "chore: rebuild package-lock.json on Linux"
+          git diff --cached --quiet || git commit -m "chore: rebuild package-lock.json on Linux"
           git push
