--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -1,35 +1,44 @@
-name: Rebuild package-lock on Linux
+name: upload
 
 on:
+  schedule:
+    - cron: '*/10 * * * *'
   workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
-  rebuild-lockfile:
+  upload:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Setup Node
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
+          cache-dependency-path: package-lock.json
 
-      - name: Rebuild lockfile (Linux, ignore scripts)
-        run: |
-          rm -rf node_modules package-lock.json
-          npm install --package-lock-only --ignore-scripts
+      - name: Install dependencies
+        run: npm ci --omit=optional --no-audit --no-fund
 
-      - name: Commit and push lockfile
+      - name: Run upload-secrets
+        env:
+          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+          SEPOLIA_RPC_URL: ${{ secrets.SEPOLIA_RPC_URL }}
+        run: node upload-secrets.js
+
+      - name: Commit and push updated activeSecrets.json
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: ${{ github.ref_name }}
+          REPO: ${{ github.repository }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add package-lock.json
-          git diff --cached --quiet || git commit -m "chore: rebuild package-lock.json on Linux"
-          git push
+          git add activeSecrets.json
+          git commit -m "Update activeSecrets.json [skip ci]" || exit 0
+          git push "https://x-access-token:${GITHUB_TOKEN}@github.com/${REPO}.git" "HEAD:${BRANCH}"
