--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -22,8 +22,9 @@ jobs:
           cache: npm
           cache-dependency-path: package-lock.json
 
+      # Use install instead of ci to skip mac-only deps like fsevents cleanly
       - name: Install dependencies
-        run: npm ci --omit=optional --no-audit --no-fund
+        run: npm install --omit=optional --no-audit --no-fund
 
       - name: Run upload-secrets
         env:
