--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -15,15 +15,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Set up Node.js (with npm cache)
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
           cache-dependency-path: package-lock.json
 
-      # Use install instead of ci to skip mac-only deps like fsevents cleanly
+      # Cache node_modules keyed by the lockfile (OS + Node + lock hash)
+      - name: Cache node_modules
+        id: nm-cache
+        uses: actions/cache@v4
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node20-nm-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node20-nm-
+
+      # Only install when cache missed
       - name: Install dependencies
+        if: steps.nm-cache.outputs.cache-hit != 'true'
         run: npm install --omit=optional --no-audit --no-fund
 
       - name: Run upload-secrets
