--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -37,6 +37,18 @@ jobs:
         if: steps.nm-cache.outputs.cache-hit != 'true'
         run: npm install --omit=optional --no-audit --no-fund
 
+              - name: Show repo tree (top level)
+        run: ls -la
+
+      - name: Show secrets directory
+        run: |
+          if [ -d secrets ]; then
+            ls -la secrets
+          else
+            echo "No ./secrets directory present"
+          fi
+
+
       - name: Run upload-secrets
         env:
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
