--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -8,9 +8,14 @@ on:
 permissions:
   contents: write
 
+concurrency:
+  group: upload-secrets-${{ github.ref }}
+  cancel-in-progress: false
+
 jobs:
   upload:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -32,28 +37,43 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node20-nm-
 
-      # Only install when cache missed
-      - name: Install dependencies
+      - name: Install dependencies (only when cache missed)
         if: steps.nm-cache.outputs.cache-hit != 'true'
-        run: npm install --omit=optional --no-audit --no-fund
+        run: npm ci --omit=optional --no-audit --no-fund
 
-              - name: Show repo tree (top level)
+      # Visibility: show repo layout and any secrets directory
+      - name: Show repo tree (top level)
         run: ls -la
 
-      - name: Show secrets directory
+      - name: Show secrets directory (if present)
         run: |
           if [ -d secrets ]; then
+            echo "📂 ./secrets contents:"
             ls -la secrets
           else
-            echo "No ./secrets directory present"
+            echo "ℹ️ No ./secrets directory found"
           fi
 
-
+      # Run your uploader with an explicit secrets path.
+      # Change SECRETS_PATH if you store league-specific files.
       - name: Run upload-secrets
         env:
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           SEPOLIA_RPC_URL: ${{ secrets.SEPOLIA_RPC_URL }}
+          # Make the input file explicit so we NEVER upload a dummy example by accident.
+          SECRETS_PATH: secrets/prod.nfl.json
         run: node upload-secrets.js
+
+      # Optional: print the file your script just wrote so the run log is self-describing
+      - name: Show activeSecrets.json
+        run: |
+          if [ -f activeSecrets.json ]; then
+            echo "📝 activeSecrets.json:"
+            cat activeSecrets.json
+          else
+            echo "❌ activeSecrets.json not found — did upload-secrets.js write it?"
+            exit 1
+          fi
 
       - name: Commit and push updated activeSecrets.json
         env:
@@ -66,3 +86,4 @@ jobs:
           git add activeSecrets.json
           git commit -m "Update activeSecrets.json [skip ci]" || exit 0
           git push "https://x-access-token:${GITHUB_TOKEN}@github.com/${REPO}.git" "HEAD:${BRANCH}"
+
