--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -27,7 +27,6 @@ jobs:
           cache: npm
           cache-dependency-path: package-lock.json
 
-      # Cache node_modules keyed by the lockfile (OS + Node + lock hash)
       - name: Cache node_modules
         id: nm-cache
         uses: actions/cache@v4
@@ -41,30 +40,20 @@ jobs:
         if: steps.nm-cache.outputs.cache-hit != 'true'
         run: npm ci --omit=optional --no-audit --no-fund
 
-      # Visibility: show repo layout and any secrets directory
       - name: Show repo tree (top level)
         run: ls -la
 
-      - name: Show secrets directory (if present)
-        run: |
-          if [ -d secrets ]; then
-            echo "📂 ./secrets contents:"
-            ls -la secrets
-          else
-            echo "ℹ️ No ./secrets directory found"
-          fi
-
-      # Run your uploader with an explicit secrets path.
-      # Change SECRETS_PATH if you store league-specific files.
-      - name: Run upload-secrets
+      # Build secrets from GH Actions secrets (no repo file) and upload to DON
+      - name: Upload DON secrets (from GH Actions secrets)
         env:
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           SEPOLIA_RPC_URL: ${{ secrets.SEPOLIA_RPC_URL }}
-          # Make the input file explicit so we NEVER upload a dummy example by accident.
-          SECRETS_PATH: secrets/prod.nfl.json
+          MLB_API_KEY: ${{ secrets.MLB_API_KEY }}
+          NFL_API_KEY: ${{ secrets.NFL_API_KEY }}
+          MLB_ENDPOINT: ${{ secrets.MLB_ENDPOINT }}
+          NFL_ENDPOINT: ${{ secrets.NFL_ENDPOINT }}
         run: node upload-secrets.js
 
-      # Optional: print the file your script just wrote so the run log is self-describing
       - name: Show activeSecrets.json
         run: |
           if [ -f activeSecrets.json ]; then
@@ -86,4 +75,3 @@ jobs:
           git add activeSecrets.json
           git commit -m "Update activeSecrets.json [skip ci]" || exit 0
           git push "https://x-access-token:${GITHUB_TOKEN}@github.com/${REPO}.git" "HEAD:${BRANCH}"
-
