--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -36,9 +36,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node20-nm-
 
-      - name: Install dependencies (only when cache missed)
-        if: steps.nm-cache.outputs.cache-hit != 'true'
-        run: npm ci --omit=optional --no-audit --no-fund
+      # Linux-safe install to avoid fsevents and other platform-only deps
+      - name: Install dependencies (linux-safe)
+        run: |
+          npm install --omit=optional --no-audit --no-fund --ignore-scripts
 
       - name: Show repo tree (top level)
         run: ls -la
@@ -75,3 +76,4 @@ jobs:
           git add activeSecrets.json
           git commit -m "Update activeSecrets.json [skip ci]" || exit 0
           git push "https://x-access-token:${GITHUB_TOKEN}@github.com/${REPO}.git" "HEAD:${BRANCH}"
+
