--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -32,19 +32,21 @@ jobs:
         uses: actions/cache@v4
         with:
           path: node_modules
-          key: ${{ runner.os }}-node20-nm-${{ hashFiles('package-lock.json') }}
+          # bump the cache key suffix to force a fresh install
+          key: ${{ runner.os }}-node20-nm-v3-${{ hashFiles('package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node20-nm-
+            ${{ runner.os }}-node20-nm-v3-
 
-      # Linux-safe install to avoid fsevents and other platform-only deps
       - name: Install dependencies (linux-safe)
         run: |
           npm install --omit=optional --no-audit --no-fund --ignore-scripts
 
+      - name: Show toolkit version actually installed
+        run: node -e "try{console.log('functions-toolkit:', require('@chainlink/functions-toolkit/package.json').version)}catch(e){console.log('functions-toolkit: missing')}"
+
       - name: Show repo tree (top level)
         run: ls -la
 
-      # Build secrets from GH Actions secrets (no repo file) and upload to DON
       - name: Upload DON secrets (from GH Actions secrets)
         env:
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
@@ -76,4 +78,3 @@ jobs:
           git add activeSecrets.json
           git commit -m "Update activeSecrets.json [skip ci]" || exit 0
           git push "https://x-access-token:${GITHUB_TOKEN}@github.com/${REPO}.git" "HEAD:${BRANCH}"
-
