--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -8,43 +8,26 @@ on:
 permissions:
   contents: write
 
-concurrency:
-  group: upload-secrets-${{ github.ref }}
-  cancel-in-progress: false
-
 jobs:
   upload:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Node.js (with npm cache)
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
-          cache-dependency-path: package-lock.json
 
-      - name: Cache node_modules
-        id: nm-cache
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-node20-nm-v3-${{ hashFiles('package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node20-nm-v3-
-
-      - name: Install dependencies (linux-safe)
+      # Linux-safe install (avoids fsevents). If npm ci fails, fall back to install.
+      - name: Install dependencies
         run: |
-          npm install --omit=optional --no-audit --no-fund --ignore-scripts
+          npm ci --omit=optional --no-audit --no-fund || npm install --omit=optional --no-audit --no-fund --ignore-scripts
 
-      - name: Show toolkit version actually installed
-        run: node -e "try{console.log('functions-toolkit:', require('@chainlink/functions-toolkit/package.json').version)}catch(e){console.log('functions-toolkit: missing')}"
-
-      - name: Show repo tree (top level)
-        run: ls -la
+      # Print toolkit version actually installed on the runner
+      - name: Show toolkit version
+        run: node -p "try{console.log(require('@chainlink/functions-toolkit/package.json').version)}catch(e){console.log('missing')}"
 
       - name: Upload DON secrets (from GH Actions secrets)
         env:
@@ -57,14 +40,7 @@ jobs:
         run: node upload-secrets.js
 
       - name: Show activeSecrets.json
-        run: |
-          if [ -f activeSecrets.json ]; then
-            echo "📝 activeSecrets.json:"
-            cat activeSecrets.json
-          else
-            echo "❌ activeSecrets.json not found — did upload-secrets.js write it?"
-            exit 1
-          fi
+        run: cat activeSecrets.json
 
       - name: Commit and push updated activeSecrets.json
         env:
@@ -75,5 +51,5 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add activeSecrets.json
-          git commit -m "Update activeSecrets.json [skip ci]" || exit 0
+          git commit -m "Update activeSecrets.json [skip ci]" || true
           git push "https://x-access-token:${GITHUB_TOKEN}@github.com/${REPO}.git" "HEAD:${BRANCH}"
