--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -20,14 +20,13 @@ jobs:
         with:
           node-version: 20
 
-      # Linux-safe install (avoids fsevents). If npm ci fails, fall back to install.
       - name: Install dependencies
         run: |
-          npm ci --omit=optional --no-audit --no-fund || npm install --omit=optional --no-audit --no-fund --ignore-scripts
+          npm ci --omit=optional --no-audit --no-fund \
+          || npm install --omit=optional --no-audit --no-fund
 
-      # Print toolkit version actually installed on the runner
       - name: Show toolkit version
-        run: node -p "try{console.log(require('@chainlink/functions-toolkit/package.json').version)}catch(e){console.log('missing')}"
+        run: node -p "require('@chainlink/functions-toolkit/package.json').version"
 
       - name: Upload DON secrets (from GH Actions secrets)
         env:
