--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -11,19 +11,31 @@ permissions:
 jobs:
   upload:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: .github/secrets-uploader
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup Node (cache npm)
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: npm
+          cache-dependency-path: .github/secrets-uploader/package-lock.json
 
-      - name: Install dependencies
-        run: |
-          npm ci --omit=optional --no-audit --no-fund \
-          || npm install --omit=optional --no-audit --no-fund
+      - name: Cache node_modules (uploader only)
+        uses: actions/cache@v4
+        with:
+          path: .github/secrets-uploader/node_modules
+          key: ${{ runner.os }}-node20-uploader-${{ hashFiles('.github/secrets-uploader/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node20-uploader-
+
+      - name: Install deps (tiny set)
+        run: npm ci --omit=optional --no-audit --no-fund
 
       - name: Show toolkit version
         run: node -p "require('@chainlink/functions-toolkit/package.json').version"
@@ -36,10 +48,12 @@ jobs:
           NFL_API_KEY: ${{ secrets.NFL_API_KEY }}
           MLB_ENDPOINT: ${{ secrets.MLB_ENDPOINT }}
           NFL_ENDPOINT: ${{ secrets.NFL_ENDPOINT }}
-        run: node upload-secrets.js
+          # Optional: override TTL (minutes)
+          # DON_TTL_MINUTES: 1440
+        run: npm run upload
 
-      - name: Show activeSecrets.json
-        run: cat activeSecrets.json
+      - name: Show activeSecrets.json (repo root)
+        run: cat ../../activeSecrets.json
 
       - name: Commit and push updated activeSecrets.json
         env:
@@ -49,6 +63,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add activeSecrets.json
+          git add ../../activeSecrets.json
           git commit -m "Update activeSecrets.json [skip ci]" || true
           git push "https://x-access-token:${GITHUB_TOKEN}@github.com/${REPO}.git" "HEAD:${BRANCH}"
