--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -19,23 +19,30 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node (cache npm)
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
-          cache-dependency-path: .github/secrets-uploader/package-lock.json
 
+      # Cache only the tiny uploader's node_modules
       - name: Cache node_modules (uploader only)
         uses: actions/cache@v4
         with:
           path: .github/secrets-uploader/node_modules
-          key: ${{ runner.os }}-node20-uploader-${{ hashFiles('.github/secrets-uploader/package-lock.json') }}
+          # Hash lockfile if present, else fall back to package.json
+          key: ${{ runner.os }}-node20-uploader-${{ hashFiles('.github/secrets-uploader/package-lock.json', '.github/secrets-uploader/package.json') }}
           restore-keys: |
             ${{ runner.os }}-node20-uploader-
 
-      - name: Install deps (tiny set)
-        run: npm ci --omit=optional --no-audit --no-fund
+      - name: Install deps (tiny)
+        run: |
+          if [ ! -d node_modules ]; then
+            if [ -f package-lock.json ]; then
+              npm ci --omit=optional --no-audit --no-fund
+            else
+              npm install --omit=optional --no-audit --no-fund
+            fi
+          fi
 
       - name: Show toolkit version
         run: node -p "require('@chainlink/functions-toolkit/package.json').version"
@@ -48,7 +55,7 @@ jobs:
           NFL_API_KEY: ${{ secrets.NFL_API_KEY }}
           MLB_ENDPOINT: ${{ secrets.MLB_ENDPOINT }}
           NFL_ENDPOINT: ${{ secrets.NFL_ENDPOINT }}
-          # Optional: override TTL (minutes)
+          # Optional: override TTL (minutes). Default is 1440 (24h).
           # DON_TTL_MINUTES: 1440
         run: npm run upload
 
