--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -24,12 +24,12 @@ jobs:
         with:
           node-version: 20
 
-      # Cache only the tiny uploader's node_modules
+      # Cache only the tiny uploader's deps
       - name: Cache node_modules (uploader only)
         uses: actions/cache@v4
         with:
           path: .github/secrets-uploader/node_modules
-          # Hash lockfile if present, else fall back to package.json
+          # Hash lockfile if present, else package.json
           key: ${{ runner.os }}-node20-uploader-${{ hashFiles('.github/secrets-uploader/package-lock.json', '.github/secrets-uploader/package.json') }}
           restore-keys: |
             ${{ runner.os }}-node20-uploader-
@@ -55,7 +55,7 @@ jobs:
           NFL_API_KEY: ${{ secrets.NFL_API_KEY }}
           MLB_ENDPOINT: ${{ secrets.MLB_ENDPOINT }}
           NFL_ENDPOINT: ${{ secrets.NFL_ENDPOINT }}
-          # Optional: override TTL (minutes). Default is 1440 (24h).
+          # Optional: override TTL in minutes (defaults to 1440 = 24h)
           # DON_TTL_MINUTES: 1440
         run: npm run upload
 
