--- a/.github/secrets-uploader/package.json
+++ b/.github/secrets-uploader/package.json
@@ -7,7 +7,7 @@
     "upload": "node upload-secrets.js"
   },
   "dependencies": {
-    "@chainlink/functions-toolkit": "^0.10.0",
+    "@chainlink/functions-toolkit": "0.3.2",
     "ethers": "^5.7.2",
     "dotenv": "^16.4.5"
   }
