--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -2,11 +2,15 @@ name: upload
 
 on:
   schedule:
-    - cron: '*/10 * * * *'
+    - cron: '*/10 * * * *'   # every 10 minutes
   workflow_dispatch:
 
 permissions:
   contents: write
+
+concurrency:
+  group: don-secrets-upload
+  cancel-in-progress: true
 
 jobs:
   upload:
@@ -24,17 +28,16 @@ jobs:
         with:
           node-version: 20
 
-      # Cache only the tiny uploader's deps
+      # Cache only the uploader's deps
       - name: Cache node_modules (uploader only)
         uses: actions/cache@v4
         with:
           path: .github/secrets-uploader/node_modules
-          # Hash lockfile if present, else package.json
           key: ${{ runner.os }}-node20-uploader-${{ hashFiles('.github/secrets-uploader/package-lock.json', '.github/secrets-uploader/package.json') }}
           restore-keys: |
             ${{ runner.os }}-node20-uploader-
 
-      - name: Install deps (tiny)
+      - name: Install deps (tiny uploader)
         run: |
           if [ ! -d node_modules ]; then
             if [ -f package-lock.json ]; then
@@ -47,16 +50,51 @@ jobs:
       - name: Show toolkit version
         run: node -p "require('@chainlink/functions-toolkit/package.json').version"
 
-      - name: Upload DON secrets (from GH Actions secrets)
+      # Optional: print which keys are present (for debugging)
+      - name: Report available *_API_KEY secrets
         env:
-          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-          SEPOLIA_RPC_URL: ${{ secrets.SEPOLIA_RPC_URL }}
           MLB_API_KEY: ${{ secrets.MLB_API_KEY }}
           NFL_API_KEY: ${{ secrets.NFL_API_KEY }}
+          NBA_API_KEY: ${{ secrets.NBA_API_KEY }}
+          NHL_API_KEY: ${{ secrets.NHL_API_KEY }}
+          EPL_API_KEY: ${{ secrets.EPL_API_KEY }}
+          UCL_API_KEY: ${{ secrets.UCL_API_KEY }}
+        run: |
+          for K in MLB_API_KEY NFL_API_KEY NBA_API_KEY NHL_API_KEY EPL_API_KEY UCL_API_KEY; do
+            if [ -n "${!K}" ]; then
+              echo "✓ $K is set"
+            else
+              echo "• $K is NOT set (skipping)"
+            fi
+          done
+
+      - name: Upload DON secrets (from GH Actions secrets)
+        env:
+          # signer & RPC
+          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+          # If you’ve moved to Arbitrum Sepolia, set ARBITRUM_SEPOLIA_RPC_URL in repo secrets.
+          ARBITRUM_SEPOLIA_RPC_URL: ${{ secrets.ARBITRUM_SEPOLIA_RPC_URL }}
+          SEPOLIA_RPC_URL: ${{ secrets.SEPOLIA_RPC_URL }}
+          # Your uploader can pick ARBITRUM_SEPOLIA_RPC_URL first, then fall back to SEPOLIA_RPC_URL.
+
+          # League API keys (all included)
+          MLB_API_KEY: ${{ secrets.MLB_API_KEY }}
+          NFL_API_KEY: ${{ secrets.NFL_API_KEY }}
+          NBA_API_KEY: ${{ secrets.NBA_API_KEY }}
+          NHL_API_KEY: ${{ secrets.NHL_API_KEY }}
+          EPL_API_KEY: ${{ secrets.EPL_API_KEY }}
+          UCL_API_KEY: ${{ secrets.UCL_API_KEY }}
+
+          # (Optional) endpoints — not used by your JS, but harmless to pass
           MLB_ENDPOINT: ${{ secrets.MLB_ENDPOINT }}
           NFL_ENDPOINT: ${{ secrets.NFL_ENDPOINT }}
-          # Optional: override TTL in minutes (defaults to 1440 = 24h)
-          # DON_TTL_MINUTES: 1440
+          NBA_ENDPOINT: ${{ secrets.NBA_ENDPOINT }}
+          NHL_ENDPOINT: ${{ secrets.NHL_ENDPOINT }}
+          EPL_ENDPOINT: ${{ secrets.EPL_ENDPOINT }}
+          UCL_ENDPOINT: ${{ secrets.UCL_ENDPOINT }}
+
+          # Optional: TTL in minutes for DON-hosted secrets (default 1440 = 24h)
+          DON_TTL_MINUTES: 1440
         run: npm run upload
 
       - name: Show activeSecrets.json (repo root)
