--- a/.github/workflows/upload-secrets.yml
+++ b/.github/workflows/upload-secrets.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Show toolkit version
         run: node -p "require('@chainlink/functions-toolkit/package.json').version"
 
-      # Optional: print which keys are present (for debugging)
+      # Sanity: show which *_API_KEY are available to this job (helpful but not decisive)
       - name: Report available *_API_KEY secrets
         env:
           MLB_API_KEY: ${{ secrets.MLB_API_KEY }}
@@ -72,12 +72,15 @@ jobs:
         env:
           # signer & RPC
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-          # If you’ve moved to Arbitrum Sepolia, set ARBITRUM_SEPOLIA_RPC_URL in repo secrets.
-          ARBITRUM_SEPOLIA_RPC_URL: ${{ secrets.ARBITRUM_SEPOLIA_RPC_URL }}
           SEPOLIA_RPC_URL: ${{ secrets.SEPOLIA_RPC_URL }}
-          # Your uploader can pick ARBITRUM_SEPOLIA_RPC_URL first, then fall back to SEPOLIA_RPC_URL.
+          # If you’re on Arbitrum Sepolia later, also set ARBITRUM_SEPOLIA_RPC_URL and have your script prefer it.
+          ARBITRUM_SEPOLIA_RPC_URL: ${{ secrets.ARBITRUM_SEPOLIA_RPC_URL }}
 
-          # League API keys (all included)
+          # IMPORTANT: Slot must match what send-request.js uses (you currently use slot 0)
+          SLOT_ID: 0
+          DON_TTL_MINUTES: 1440
+
+          # League API keys (all passed through)
           MLB_API_KEY: ${{ secrets.MLB_API_KEY }}
           NFL_API_KEY: ${{ secrets.NFL_API_KEY }}
           NBA_API_KEY: ${{ secrets.NBA_API_KEY }}
@@ -85,17 +88,19 @@ jobs:
           EPL_API_KEY: ${{ secrets.EPL_API_KEY }}
           UCL_API_KEY: ${{ secrets.UCL_API_KEY }}
 
-          # (Optional) endpoints — not used by your JS, but harmless to pass
+          # Optional endpoints (harmless to upload; your JS doesn’t need them)
           MLB_ENDPOINT: ${{ secrets.MLB_ENDPOINT }}
           NFL_ENDPOINT: ${{ secrets.NFL_ENDPOINT }}
           NBA_ENDPOINT: ${{ secrets.NBA_ENDPOINT }}
           NHL_ENDPOINT: ${{ secrets.NHL_ENDPOINT }}
           EPL_ENDPOINT: ${{ secrets.EPL_ENDPOINT }}
           UCL_ENDPOINT: ${{ secrets.UCL_ENDPOINT }}
-
-          # Optional: TTL in minutes for DON-hosted secrets (default 1440 = 24h)
-          DON_TTL_MINUTES: 1440
-        run: npm run upload
+        run: |
+          echo "Upload step sees these *_API_KEY envs:"
+          for K in MLB_API_KEY NFL_API_KEY NBA_API_KEY NHL_API_KEY EPL_API_KEY UCL_API_KEY; do
+            if [ -n "${!K}" ]; then echo "✓ $K present"; else echo "• $K MISSING"; fi
+          done
+          npm run upload
 
       - name: Show activeSecrets.json (repo root)
         run: cat ../../activeSecrets.json
