--- a/.github/workflows/settlement-bot.yml
+++ b/.github/workflows/settlement-bot.yml
@@ -1,30 +1,49 @@
 name: Settlement Bot
+
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "*/5 * * * *"   # every 5 minutes (UTC)
   workflow_dispatch: {}
+
 jobs:
   run:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'   # only run on main
     runs-on: ubuntu-latest
     permissions:
       contents: read
     concurrency:
       group: settlement-bot
       cancel-in-progress: false
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
-      - run: npm ci
-      - run: npx hardhat compile || true
-      - run: npx ts-node bots/settlement-bot.ts
+
+      # Avoid macOS-only optional deps (like fsevents) on Linux runners
+      - name: Install deps (skip optional)
+        run: npm ci --omit=optional
+
+      # If your repo has Hardhat + sources, compile to ensure artifacts exist.
+      # Safe to ignore failure if artifacts are already committed.
+      - name: Compile (best-effort)
+        run: npx hardhat compile || true
+
+      - name: Run settlement bot
+        # If ts-node is in devDependencies, this uses your local version.
+        # If not, you can switch to: run: npx -y ts-node bots/settlement-bot.ts
+        run: npx ts-node bots/settlement-bot.ts
         env:
           RPC_URL: ${{ secrets.RPC_URL }}
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           THESPORTSDB_API_KEY: ${{ secrets.THESPORTSDB_API_KEY }}
+          # Set DRY_RUN to "1" for testing (no txs), then back to "0"
           DRY_RUN: "0"
           MAX_TX_PER_RUN: "8"
           REQUEST_GAP_SECONDS: "120"
+
