--- a/.github/workflows/settlement-bot.yml
+++ b/.github/workflows/settlement-bot.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   run:
-    if: github.ref == 'refs/heads/main'   # only run on main
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -23,27 +23,23 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
 
-      # Avoid macOS-only optional deps (like fsevents) on Linux runners
-      - name: Install deps (skip optional)
-        run: npm ci --omit=optional
-
-      # If your repo has Hardhat + sources, compile to ensure artifacts exist.
-      # Safe to ignore failure if artifacts are already committed.
-      - name: Compile (best-effort)
-        run: npx hardhat compile || true
-
-      - name: Run settlement bot
-        # If ts-node is in devDependencies, this uses your local version.
-        # If not, you can switch to: run: npx -y ts-node bots/settlement-bot.ts
-        run: npx ts-node bots/settlement-bot.ts
+      # Run the bot without installing your repo's node_modules.
+      # npx will fetch only what the bot needs for this run.
+      - name: Run settlement bot (ephemeral deps)
+        run: >
+          npx -y
+          --package ts-node@10.9.2
+          --package typescript@5
+          --package axios@^1
+          --package ethers@^6
+          --package dotenv@^16
+          ts-node bots/settlement-bot.ts
         env:
           RPC_URL: ${{ secrets.RPC_URL }}
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           THESPORTSDB_API_KEY: ${{ secrets.THESPORTSDB_API_KEY }}
-          # Set DRY_RUN to "1" for testing (no txs), then back to "0"
+          # Set to "1" for a safe test run (no txs), then back to "0".
           DRY_RUN: "0"
           MAX_TX_PER_RUN: "8"
           REQUEST_GAP_SECONDS: "120"
-
