--- a/.github/workflows/settlement-bot.yml
+++ b/.github/workflows/settlement-bot.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           node-version: 20
 
-      - name: Run settlement bot (ESM, ephemeral deps, transpile-only)
+      - name: Run settlement bot (ESM via tsx)
         env:
           RPC_URL: ${{ secrets.SEPOLIA_RPC_URL }}
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
@@ -33,13 +33,8 @@ jobs:
           MAX_TX_PER_RUN: "8"
           REQUEST_GAP_SECONDS: "120"
           CONTRACTS: ${{ secrets.CONTRACTS }}   # optional
-          # IMPORTANT: ESM config for ts-node
-          TS_NODE_COMPILER_OPTIONS: >-
-            {"module":"NodeNext","moduleResolution":"NodeNext",
-             "esModuleInterop":true,"resolveJsonModule":true,"skipLibCheck":true}
         run: >
           npx -y
-          --package ts-node@10.9.2
-          --package typescript@5
+          --package tsx@^4
           --package ethers@^6
-          ts-node --esm --transpile-only bots/settlement-bot.ts
+          tsx bots/settlement-bot.ts
