--- a/.github/workflows/settlement-bot.yml
+++ b/.github/workflows/settlement-bot.yml
@@ -2,7 +2,7 @@ name: Settlement Bot
 
 on:
   schedule:
-    - cron: "*/5 * * * *"
+    - cron: "*/5 * * * *"   # every 5 minutes (UTC)
   workflow_dispatch: {}
 
 jobs:
@@ -16,8 +16,17 @@ jobs:
       cancel-in-progress: false
 
     steps:
-      - name: Checkout repo
+      # Backend (this repo)
+      - name: Checkout backend repo
         uses: actions/checkout@v4
+
+      # Frontend repo — source of truth for games.json
+      - name: Checkout frontend repo (for games.json)
+        uses: actions/checkout@v4
+        with:
+          repository: harrisonschultz7/blockpools-frontend   # your private frontend repo
+          path: frontend-src
+          token: ${{ secrets.FRONTEND_READ_TOKEN }}          # PAT with "Contents: Read" on that repo
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -47,8 +56,10 @@ jobs:
           RPC_URL: ${{ secrets.SEPOLIA_RPC_URL }}
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
           THESPORTSDB_API_KEY: ${{ secrets.THESPORTSDB_API_KEY }}
-          DRY_RUN: "1"             # flip to "0" after a good dry run
+          DRY_RUN: "1"               # set to "0" to actually send txs
           MAX_TX_PER_RUN: "8"
           REQUEST_GAP_SECONDS: "120"
-          CONTRACTS: ${{ secrets.CONTRACTS }}   # optional: comma/space-separated
+          CONTRACTS: ${{ secrets.CONTRACTS }}   # optional fallback list of addresses
+          # Path inside the checked-out frontend repo:
+          GAMES_PATH: ${{ github.workspace }}/frontend-src/src/data/games.json
         run: ./bot-runner/node_modules/.bin/tsx bots/settlement-bot.ts
