--- a/.github/workflows/settlement-bot.yml
+++ b/.github/workflows/settlement-bot.yml
@@ -24,9 +24,9 @@ jobs:
       - name: Checkout frontend repo (for games.json)
         uses: actions/checkout@v4
         with:
-          repository: harrisonschultz7/blockpools-frontend   # your private frontend repo
+          repository: harrisonschultz7/blockpools-frontend
           path: frontend-src
-          token: ${{ secrets.FRONTEND_READ_TOKEN }}          # PAT with "Contents: Read" on that repo
+          token: ${{ secrets.FRONTEND_READ_TOKEN }}  # PAT with read access
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -47,19 +47,36 @@ jobs:
         run: npm install --omit=optional --no-audit --no-fund
         working-directory: bot-runner
 
-      # Make cached deps visible to bots/ by creating a root-level symlink
       - name: Link cached deps at repo root
         run: ln -sfn bot-runner/node_modules node_modules
 
-      - name: Run settlement bot (via cached tsx)
+      - name: Run settlement bot (classic sendRequest)
         env:
+          # RPC + signer
           RPC_URL: ${{ secrets.SEPOLIA_RPC_URL }}
           PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+
+          # Chainlink Functions params
+          SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}  # e.g. 4766
+          FUNCTIONS_GAS_LIMIT: "300000"
+          DON_SECRETS_SLOT: "0"
+
+          # DON pointer loader (same as scripts/send-request.js)
+          GITHUB_OWNER: "harrisonschultz7"
+          GITHUB_REPO: "blockpools-backend"
+          GITHUB_REF: "main"
+          GH_PAT: ${{ secrets.GH_PAT }}                    # optional; if repo is private
+
+          # TSDB + behavior
           THESPORTSDB_API_KEY: ${{ secrets.THESPORTSDB_API_KEY }}
-          DRY_RUN: "1"               # set to "0" to actually send txs
+          DRY_RUN: "1"                  # set to "0" to actually send txs
           MAX_TX_PER_RUN: "8"
           REQUEST_GAP_SECONDS: "120"
-          CONTRACTS: ${{ secrets.CONTRACTS }}   # optional fallback list of addresses
+          CONTRACTS: ${{ secrets.CONTRACTS }}             # optional fallback
+
           # Path inside the checked-out frontend repo:
           GAMES_PATH: ${{ github.workspace }}/frontend-src/src/data/games.json
+
+          # If your SOURCE_CODE still needs 6-arg compat, flip this:
+          # COMPAT_TSDB: "1"
         run: ./bot-runner/node_modules/.bin/tsx bots/settlement-bot.ts
